<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_place_bid"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.ucsd.cse110.ucsandeliever.PlaceBidActivity">

    <Button
        android:text="Place Bid!"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button4"
        tools:ignore="HardcodedText"
        android:layout_below="@+id/editText12"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:id="@+id/editText12"
        tools:ignore="HardcodedText"
        android:layout_marginTop="22dp"
        android:background="@android:drawable/editbox_background_normal"
        android:layout_below="@+id/textView19"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="Enter your delivery time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView13"
        tools:ignore="HardcodedText"
        android:layout_marginTop="60dp"
        android:textSize="18sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="Enter the payment you want"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView19"
        tools:ignore="HardcodedText"
        android:textSize="18sp"
        android:layout_below="@+id/timePicker"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText7"
        android:background="@android:drawable/editbox_background_normal"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/textView13"
        android:layout_alignLeft="@+id/textView13"
        android:layout_alignStart="@+id/textView13"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp" />

    <Button
        android:text="Pick a time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timePicker"
        android:layout_alignBaseline="@+id/editText7"
        android:layout_alignBottom="@+id/editText7"
        android:layout_toRightOf="@+id/button4"
        android:layout_toEndOf="@+id/button4" />

</RelativeLayout>
