<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@color/littlePur"

    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.ucsd.cse110.ucsandeliever.MainActivity">


    <Button
        android:text="New Member"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonsignup"
        android:onClick="welcomeSystem"
        android:layout_marginTop="52dp"
        android:layout_below="@+id/buttonsignin"
        android:layout_alignLeft="@+id/buttonsignin"
        android:layout_alignStart="@+id/buttonsignin"
        android:layout_alignRight="@+id/buttonsignin"
        android:layout_alignEnd="@+id/buttonsignin" />

    <Button
        android:text="Returning Customer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonsignin"
        android:onClick="welcomeSystem"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ultimate Convenient Student Delivery"
        android:textSize="15dp"
        android:textStyle="italic"
        android:textColor="@color/colorPrimary"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginBottom="100dp"
        android:id="@+id/textView14"
        android:layout_above="@+id/buttonsignin"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
