<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_view_request_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.ucsd.cse110.ucsandeliever.ViewRequestDetailActivity">


    <TextView
        android:text="E"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/View_item"
        android:textSize="18sp"
        android:layout_alignBottom="@+id/textView28"
        android:layout_toRightOf="@+id/textView18"
        android:layout_toEndOf="@+id/textView18" />

    <TextView
        android:text="Hall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/View_dest"
        android:textSize="18sp"

        android:layout_alignBottom="@+id/textView29"
        android:layout_alignLeft="@+id/View_Res"
        android:layout_alignStart="@+id/View_Res" />

    <TextView
        android:text="s"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/View_time"
        android:textSize="18sp"
        android:layout_alignBottom="@+id/textView27"
        android:layout_alignLeft="@+id/View_dest"
        android:layout_alignStart="@+id/View_dest" />

    <TextView
        android:text="Getting the Item From: "
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView26"
        android:textAlignment="center"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/textView28"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/View_Res"
        android:textSize="18sp"
        android:layout_alignTop="@+id/textView26"
        android:layout_alignLeft="@+id/View_item"
        android:layout_alignStart="@+id/View_item" />

    <TextView
        android:text="Deliver To: "
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView29"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/textView26"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="Required Deliver Before: "
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView27"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/textView29"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="I am interested!"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:layout_below="@+id/View_time"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="63dp" />

    <TextView
        android:text="The Order You Want Run For:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView18"
        android:layout_marginTop="54dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="Item: "
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView28"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/textView18"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
