<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/account_main"><![CDATA[




    //android:layout_toEndOf="@+id/textView2" />
        android:layout_toEndOf="@+id/textView2" />
    //android:layout_toRightOf="@+id/textView2"
        //android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp"
        android:layout_alignRight="@+id/accountView"
        android:layout_alignEnd="@+id/accountView" />











    ]]>

    <TextView
        android:text=" Account Information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/accountView"
        android:layout_marginTop="94dp"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="Your Current Balance:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textSize="25sp"
        android:layout_below="@+id/accountView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp" />

    <TextView
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/Balance"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:textAlignment="center"
        android:textSize="18dp"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="You Can Set Your Balance Here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/balanceSetting"
        android:layout_below="@+id/Balance"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="106dp" />

</RelativeLayout>